# qiskit_trial_and_error

./: .pre-commit-config.yaml  README.md  pyproject.toml
qiskit_tutorial/: bernstein_bazarani.py  deutsch_alg.py  hello_world.py  simple_measurement.py
