[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
qiskit = {extras = ["visualization"], version = "^1.2.1"}
qiskit-ibm-runtime = "^0.29.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
